Added ability to mark a card as done
Closes #534

Signed-off-by: Thanos Kamber <thanos.kamber@gmail.com>

--- a/l10n/en_GB.json
+++ b/l10n/en_GB.json
@@ -63,7 +63,11 @@
     "Description" : "Description",
     "Formatting help" : "Formatting help",
     "(group)" : "(group)",
+    "Mark card as done": "Mark card as done",
+    "Mark card as not done": "Mark card as not done",
+    "No due date": "No due date",
     "Archive card" : "Archive card",
+    "Anarchive card" : "Unarchive card",
     "Delete card" : "Delete card",
     "seconds ago" : "seconds ago",
     "Archived boards" : "Archived boards",
