--- a/l10n/de_DE.json
+++ b/l10n/de_DE.json
@@ -409,6 +409,8 @@
     "Save" : "Speichern",
     "Today" : "Heute",
     "Tomorrow" : "Morgen",
-    "No due" : "Kein Fälligkeitsdatum"
+    "No due" : "Kein Fälligkeitsdatum",
+    "Set as default board" : "Als Standard-Board festlegen",
+    "Remove as default board" : "Als Standard-Board entfernen"
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
