--- a/l10n/en_GB.json
+++ b/l10n/en_GB.json
@@ -409,6 +409,8 @@
     "Save" : "Save",
     "Today" : "Today",
     "Tomorrow" : "Tomorrow",
-    "No due" : "No due"
+    "No due" : "No due",
+    "Set as default board" : "Set as default board",
+    "Remove as default board" : "Remove as default board"
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
